--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@ body{
 
 }
 
+
+
 .title{
     color: transparent;
     background: var(--cfOrangeGradient);
@@ -17,9 +19,9 @@ body{
     font-family: "Fira Sans", system-ui;
     font-weight: 900;
     font-style: normal;
-    font-size: 4rem;
+    font-size: 2rem;
     text-transform: uppercase;
-    line-height: 4rem;
+    line-height: 2rem;
 }
 
 
@@ -45,7 +47,7 @@ body{
     font-style: normal;
     font-size: 2rem;
     text-transform: uppercase;
-    line-height: 1.5rem;
+    line-height: 2rem;
 }
 
 .ctaSubTitle{
@@ -53,4 +55,12 @@ body{
     font-weight: 300;
     font-style: normal;
     font-size: 1.6rem;   
+}
+
+@media (min-width: 768px) {
+     
+        .title {         
+            font-size: 3.5rem;            
+            line-height: 3.5rem;
+        }
 }
